# kensho-log

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: channel-concept.mdc
.github/workflows/: ci.yml
assets/character/: README.md
docs/: LIMITATIONS.md
docs/hypotheses/: 001-timing-race.md  002-age-vs-amount.md  003-dca-loss-horizon.md
docs/runs/: 001-timing-race-20260426.md
scripts/: render_001.py  run_001.py
src/kensho_log/: __init__.py
src/kensho_log/data_sources/: __init__.py  sp500.py
src/kensho_log/simulations/: __init__.py  age_vs_amount.py  dca_loss_horizon.py  timing_race.py
src/kensho_log/video/: __init__.py  audio_ffmpeg.py  narration_001.py  story_v3.py  timing_race_animation.py  voicevox.py
tests/: test_age_vs_amount.py  test_audio_ffmpeg.py  test_dca_loss_horizon.py  test_narration_001.py  test_sp500.py  test_timing_race.py  test_timing_race_animation.py
